Fix: Fixing menu on mobile

--- a/CrepeControladorFrontend/src/styles.scss
+++ b/CrepeControladorFrontend/src/styles.scss
@@ -23,6 +23,10 @@ body {
   color: var(--cor-branca);
 }
 
+body.menu-mobile-bloqueado {
+  overflow: hidden;
+}
+
 @keyframes diminuir {
   from {
     transform: scaleX(1);
